# Microbiome-TDA

./: .gitattributes  .gitignore  Makefile  README.md  cover_letter.docx  environment.yml  pyproject.toml  requirements.txt
_future/: README.md
configs/: datasets.yaml  figure_style.yaml  pipeline_params.yaml
docs/: cytoscape_edges.tsv  cytoscape_network.sif  cytoscape_nodes.tsv  index.html  network_data.json
notebooks/: 01_data_exploration.ipynb  02_network_construction.ipynb  03_tda_pipeline.ipynb  04_regime_detection.ipynb  05_biomarker_correlation.ipynb  06_regime_detection.ipynb  07_gutbrain_correlation.ipynb
paper/: generated_macros.tex  main.tex  main.toc  references.bib
r_scripts/: deseq2_diffabund.R  download_hmp_bioconductor.R  phyloseq_analysis.R  vegan_ordination.R
results/: agp_bootstrap_results.csv  agp_bootstrap_v2.csv  agp_tda_results.csv  auc_robustness.csv  classification_benchmark.csv  classification_benchmark_v2.csv  h0h1_classification.csv  h2_exploration.csv  ibdmdb_agp_overlap.csv  ibdmdb_bootstrap.csv  ibdmdb_loop_attribution_differential.csv  ibdmdb_loop_attribution_ibd.csv  ibdmdb_loop_attribution_nonIBD.csv  inductive_benchmark.csv  longitudinal_topology_scores.csv  loop_attribution_differential.csv  loop_attribution_healthy.csv  loop_attribution_ibd.csv  network_metrics_benchmark.csv  network_metrics_output.txt  precision_recall_metrics.csv  preflare_pilot.csv  preflare_pilot_perparticipant.csv  screening_simulation.csv  simulated_patient_scores.csv  taxa_sensitivity.csv  topo_sample_features.npz  topo_sample_features_h0h1.npz  treatment_response.csv  triage_simulation.csv  validation_auc_comparison.csv  validation_cohens_d.csv
scripts/: compare_results.py  compute_shannon_comparison.py  download_agp.sh  download_curatedmgd.R  download_hmp.sh  download_ibdmdb.sh  fetch_agp_redbiom.py  generate_bibtex.py  generate_latex_macros.py  generate_network_viz.py  generate_supplement_figures.py  generate_tda_overview_figure.py  run_agp_analysis.py  run_agp_bootstrap_v2.py  run_all.sh  run_classification_benchmark.py  run_classification_benchmark_v2.py  run_h0_classification.py  run_h2_exploration.py  run_ibdmdb_bootstrap.py  run_ibdmdb_loop_attribution.py  run_loop_attribution.py  setup_r_env.R  (+5 more)
(+66 files in other folders)
