[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "microbiome-tda"
version = "0.1.0"
description = "Topological data analysis for gut microbiome co-occurrence networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.1",
    "statsmodels>=0.14",
    "ripser>=0.6.4",
    "persim>=0.3.1",
    "biom-format>=2.1.14",
    "scikit-bio>=0.5.9",
    "pingouin>=0.5.3",
    "giotto-tda>=0.6.0",
    "gudhi>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
# Only package src/ — the _future/ directory is intentionally excluded.
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
