[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-tda"
version = "0.1.0"
description = "Topological data analysis for gut microbiome co-occurrence networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Adam Levine"},
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
    "networkx>=3.1,<4.0",
    "statsmodels>=0.14,<1.0",
    "ripser>=0.6.4,<0.7",
    "persim>=0.3.1,<0.4",
    "biom-format>=2.1.14,<3.0",
    "scikit-bio>=0.5.9,<0.7",
    "pingouin>=0.5.3,<0.6",
    "giotto-tda>=0.6.0,<1.0",
    "gudhi>=3.8,<4.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.65,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Repository = "https://github.com/adam-jfkhs/microbiome-tda"

[tool.setuptools.packages.find]
# Only package src/ — the _future/ directory is intentionally excluded.
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
